pkglib_LTLIBRARIES = libvcmi.la
libvcmi_la_LIBADD = @BOOST_SYSTEM_LIB@ @BOOST_FILESYSTEM_LIB@ @BOOST_THREAD_LIB@ @BOOST_IOSTREAMS_LIB@ -lz -lpthread -ldl
libvcmi_la_CXXFLAGS = @SDL_CXXFLAGS@
libvcmi_la_SOURCES = \
	BattleAction.cpp \
	BattleAction.h \
	BattleState.cpp \
	BattleState.h \
	CArtHandler.cpp \
	CArtHandler.h \
	CBuildingHandler.cpp \
	CBuildingHandler.h \
	CCampaignHandler.cpp \
	CCampaignHandler.h \
	CCreatureHandler.cpp \
	CCreatureHandler.h \
	CCreatureSet.cpp \
	CCreatureSet.h \
	CDefObjInfoHandler.cpp \
	CDefObjInfoHandler.h \
	CFileUtility.cpp \
	CFileUtility.h \
	CGameInterface.cpp \
	CGameInterface.h \
	CGameState.cpp \
	CGameState.h \
	CGeneralTextHandler.cpp \
	CGeneralTextHandler.h \
	CHeroHandler.cpp \
	CHeroHandler.h \
	CLodHandler.cpp \
	CLodHandler.h \
	CMapInfo.cpp \
	CMapInfo.h \
	CObjectHandler.cpp \
	CObjectHandler.h \
	CObstacleInstance.h \
	CSpellHandler.cpp \
	CSpellHandler.h \
	CScriptingModule.h \
	CTownHandler.cpp \
	CTownHandler.h \
	CondSh.h \
	Connection.cpp \
	Connection.h \
	ConstTransitivePtr.h \
	HeroBonus.cpp \
	HeroBonus.h \
	IGameCallback.cpp \
	IGameCallback.h \
	IGameEventsReceiver.h \
	Interprocess.h \
	NetPacks.h \
	NetPacksLib.cpp \
	ResourceSet.cpp \
	ResourceSet.h \
	RegisterTypes.cpp \
	RegisterTypes.h \
	VCMIDirs.h \
	VCMI_Lib.cpp \
	VCMI_Lib.h \
	map.cpp \
	map.h
