BUILT_SOURCES = StdInc.h.gch
StdInc.h.gch: StdInc.h
	$(CXXCOMPILE) -DVCMI_DLL -fPIC -c $<

pkglib_LTLIBRARIES = libvcmi.la
libvcmi_la_LIBADD = @BOOST_SYSTEM_LIB@ @BOOST_FILESYSTEM_LIB@ @BOOST_THREAD_LIB@ -lz -lpthread
libvcmi_la_CXXFLAGS = @SDL_CFLAGS@ -DVCMI_DLL
libvcmi_la_SOURCES = \
	../Global.h \
	Filesystem/CBinaryReader.cpp \
	Filesystem/CCompressedStream.cpp \
	Filesystem/CFileInfo.cpp \
	Filesystem/CFileInputStream.cpp \
	Filesystem/CFilesystemLoader.cpp \
	Filesystem/CLodArchiveLoader.cpp \
	Filesystem/CMemoryStream.cpp \
	Filesystem/CResourceLoader.cpp \
	Map/CCampaignHandler.cpp \
	Map/CCampaignHandler.h \
	Map/CMap.cpp \
	Map/CMap.h \
	Map/CMapInfo.cpp \
	Map/CMapInfo.h \
	Map/CMapService.cpp \
	Map/CMapService.h \
	RMG/CMapGenOptions.cpp \
	RMG/CMapGenOptions.h \
	BattleAction.cpp \
	BattleAction.h \
	BattleState.cpp \
	BattleState.h \
	CArtHandler.cpp \
	CArtHandler.h \
	CBattleCallback.cpp \
	CBattleCallback.h \
	CBuildingHandler.cpp \
	CBuildingHandler.h \
	CConfigHandler.cpp \
	CConfigHandler.h \
	CConsoleHandler.cpp \
	CConsoleHandler.h \
	CCreatureHandler.cpp \
	CCreatureHandler.h \
	CCreatureSet.cpp \
	CCreatureSet.h \
	CDefObjInfoHandler.cpp \
	CDefObjInfoHandler.h \
	CGameInterface.cpp \
	CGameInterface.h \
	CGameState.cpp \
	CGameState.h \
	CGeneralTextHandler.cpp \
	CGeneralTextHandler.h \
	CHeroHandler.cpp \
	CHeroHandler.h \
	CLogger.cpp \
	CLogger.h \
	CModHandler.cpp \
	CModHandler.h \
	CObjectHandler.cpp \
	CObjectHandler.h \
	CObstacleInstance.cpp \
	CObstacleInstance.h \
	CSpellHandler.cpp \
	CSpellHandler.h \
	CScriptingModule.h \
	CTownHandler.cpp \
	CTownHandler.h \
	CThreadHelper.cpp \
	CThreadHelper.h \
	CondSh.h \
	Connection.cpp \
	Connection.h \
	ConstTransitivePtr.h \
	HeroBonus.cpp \
	HeroBonus.h \
	IGameCallback.cpp \
	IGameCallback.h \
	IGameEventsReceiver.h \
	Interprocess.h \
	JsonNode.cpp \
	JsonNode.h \
	NetPacks.h \
	NetPacksLib.cpp \
	ResourceSet.cpp \
	ResourceSet.h \
	RegisterTypes.h \
	BattleHex.cpp \
	BattleHex.h \
	VCMIDirs.h \
	VCMI_Lib.cpp \
	VCMI_Lib.h
